[gd_scene load_steps=10 format=2]

[ext_resource path="res://Juego/EstacionRecarga/estacion_sprite.png" type="Texture" id=1]
[ext_resource path="res://Juego/EstacionRecarga/area_recarga.png" type="Texture" id=2]
[ext_resource path="res://Juego/EstacionRecarga/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/EstacionRecarga/carga.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/EstacionRecarga/vacio.ogg" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 492.632

[sub_resource type="CapsuleShape2D" id=2]
radius = 72.0165
height = 178.406

[sub_resource type="Animation" id=3]
resource_name = "activado"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga/SpriteZonaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 40 ), Vector2( 41, 41 ), Vector2( 40, 40 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0313726, 0.282353, 0.478431, 0.168627 ), Color( 0.0313726, 0.282353, 0.478431, 0.333333 ), Color( 0.0313726, 0.282353, 0.478431, 0.168627 ) ]
}

[sub_resource type="Animation" id=4]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="EstacionRecarga" type="Node2D"]
script = ExtResource( 3 )
energia = 1.0

[node name="AreaRecarga" type="Area2D" parent="."]
space_override = 1
gravity_point = true
gravity = 1000.0
collision_layer = 2147483648
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRecarga"]
shape = SubResource( 1 )

[node name="SpriteZonaRecarga" type="Sprite" parent="AreaRecarga"]
modulate = Color( 0.0313726, 0.282353, 0.478431, 0.316384 )
position = Vector2( 0, -1.68182 )
scale = Vector2( 40.8971, 40.8971 )
z_index = 40
z_as_relative = false
texture = ExtResource( 2 )

[node name="AreaColision" type="Area2D" parent="."]
rotation = 3.46488
collision_layer = 0
collision_mask = 25

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
z_index = 60
z_as_relative = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "activado"
anims/activado = SubResource( 3 )
anims/default = SubResource( 4 )

[node name="CargaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="VacioSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.6
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
